Adding a new address to contacts on the index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,73 +12,132 @@ import { Icon } from "astro-icon";
 
 <Layout title="VitaLena Massage">
   <main>
-    <BannerHome />
+    <BannerHome />``
     <!-- contacts -->
     <div id="contacts" class="contacts">
       <h1>Kontakte</h1>
       <div class="address">
-        <div class="addr-item1">
-          <div class="icon-text">
-            <Icon name="fa-solid:home" class="addr-icon home-icon" />
-            <div>
-              <div class="addr-place">
-                <p>Praxisraum</p>
-                <p>in Weiach</p>
+        <div class="all-addr-items">
+          <div class="addr-item1">
+            <div class="icon-text">
+              <Icon name="fa-solid:home" class="addr-icon home-icon" />
+              <div>
+                <div class="addr-place">
+                  <p>Praxisraum</p>
+                  <p>in Weiach</p>
+                </div>
+                <p>
+                  <a
+                    href="https://goo.gl/maps/SronJErekN9ETXpL9"
+                    target="_blank"
+                  >
+                    Im See 3
+                  </a>
+                </p>
+                <p>
+                  <a
+                    href="https://goo.gl/maps/SronJErekN9ETXpL9"
+                    target="_blank"
+                  >
+                    8187 Weiach
+                  </a>
+                </p>
               </div>
-              <p>
-                <a href="https://goo.gl/maps/SronJErekN9ETXpL9" target="_blank">
-                  Im See 3
-                </a>
-              </p>
-              <p>
-                <a href="https://goo.gl/maps/SronJErekN9ETXpL9" target="_blank">
-                  8187 Weiach
-                </a>
-              </p>
+            </div>
+            <div class="icon-text">
+              <Icon name="fa-solid:phone-alt" class="addr-icon" />
+              <a href="tel:+41795648109" target="_blank">
+                +41 (0)79 564 81 09</a
+              >
+            </div>
+            <div class="icon-text icon-text-last">
+              <Icon name="fa-solid:envelope" class="addr-icon" />
+              <a href="mailto:elena_schaller@swissonline.ch" target="_blank">
+                elena_schaller@swissonline.ch
+              </a>
             </div>
           </div>
-          <div class="icon-text">
-            <Icon name="fa-solid:phone-alt" class="addr-icon" />
-            <a href="tel:+41795648109" target="_blank"> +41 (0)79 564 81 09</a>
-          </div>
-          <div class="icon-text icon-text-last">
-            <Icon name="fa-solid:envelope" class="addr-icon" />
-            <a href="mailto:elena_schaller@swissonline.ch" target="_blank">
-              elena_schaller@swissonline.ch
-            </a>
-          </div>
-        </div>
-        <div class="addr-item2">
-          <div class="icon-text">
-            <Icon name="fa-solid:home" class="addr-icon home-icon" />
-            <div>
-              <div class="addr-place">
-                <p>SALZGROTTE</p>
-                <a href="https://salzgrotte.ch/offer-prices/" target="_blank">
-                  salzgrotte.ch
-                </a>
+
+          <div class="addr-item2">
+            <div class="icon-text">
+              <Icon name="fa-solid:home" class="addr-icon home-icon" />
+              <div>
+                <div class="addr-place">
+                  <p>SALZGROTTE</p>
+                  <a href="https://salzgrotte.ch/offer-prices/" target="_blank">
+                    salzgrotte.ch
+                  </a>
+                </div>
+                <p>
+                  <a
+                    href="https://goo.gl/maps/ZfKhNa9Ryq1TmgHh9"
+                    target="_blank"
+                  >
+                    Lindenstrasse 23
+                  </a>
+                </p>
+                <p>
+                  <a
+                    href="https://goo.gl/maps/ZfKhNa9Ryq1TmgHh9"
+                    target="_blank"
+                  >
+                    8302 Kloten
+                  </a>
+                </p>
               </div>
-              <p>
-                <a href="https://goo.gl/maps/ZfKhNa9Ryq1TmgHh9" target="_blank">
-                  Lindenstrasse 23
-                </a>
-              </p>
-              <p>
-                <a href="https://goo.gl/maps/ZfKhNa9Ryq1TmgHh9" target="_blank">
-                  8302 Kloten
-                </a>
-              </p>
+            </div>
+            <div class="icon-text">
+              <Icon name="fa-solid:phone-alt" class="addr-icon" />
+              <a href="tel:+41445505555" target="_blank">
+                +41 (0)44 550 55 55</a
+              >
+            </div>
+            <div class="icon-text icon-text-last">
+              <Icon name="fa-solid:envelope" class="addr-icon" />
+              <a href="mailto:info@salzgrotte.ch" target="_blank"
+                >info@salzgrotte.ch</a
+              >
             </div>
           </div>
-          <div class="icon-text">
-            <Icon name="fa-solid:phone-alt" class="addr-icon" />
-            <a href="tel:+41445505555" target="_blank"> +41 (0)44 550 55 55</a>
-          </div>
-          <div class="icon-text icon-text-last">
-            <Icon name="fa-solid:envelope" class="addr-icon" />
-            <a href="mailto:info@salzgrotte.ch" target="_blank"
-              >info@salzgrotte.ch</a
-            >
+
+          <div class="addr-item3">
+            <div class="icon-text">
+              <Icon name="fa-solid:home" class="addr-icon home-icon" />
+              <div>
+                <div class="addr-place">
+                  <p>Dopamin</p>
+                  <a href="https://dopaminmassagekloten.ch/" target="_blank">
+                    dopaminmassagekloten.ch
+                  </a>
+                </div>
+                <p>
+                  <a
+                    href="https://maps.app.goo.gl/474vVP38SHoaNo3r7"
+                    target="_blank"
+                  >
+                    Schaffhauserstrasse 22
+                  </a>
+                </p>
+                <p>
+                  <a
+                    href="https://maps.app.goo.gl/474vVP38SHoaNo3r7"
+                    target="_blank"
+                  >
+                    8302 Kloten
+                  </a>
+                </p>
+              </div>
+            </div>
+            <div class="icon-text">
+              <Icon name="fa-solid:phone-alt" class="addr-icon" />
+              <a href="tel:+41766990352" target="_blank"> +41 76 699 03 52</a>
+            </div>
+            <div class="icon-text icon-text-last">
+              <Icon name="fa-solid:envelope" class="addr-icon" />
+              <a href="mailto:info@salzgrotte.ch" target="_blank"
+                >elena_schaller@swissonline.ch</a
+              >
+            </div>
           </div>
         </div>
       </div>
@@ -203,9 +262,14 @@ import { Icon } from "astro-icon";
 
   .address {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     padding-top: 20px;
     gap: 8px;
+  }
+
+  .all-addr-items {
+    display: flex;
   }
 
   .addr-item1 {
@@ -215,6 +279,12 @@ import { Icon } from "astro-icon";
   }
 
   .addr-item2 {
+    text-align: left;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .addr-item3 {
     text-align: left;
     padding-left: 20px;
     padding-right: 20px;
@@ -348,6 +418,26 @@ import { Icon } from "astro-icon";
   }
 
   @media (max-width: 900px) {
+    .address {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    .all-addr-items {
+      display: flex;
+      flex-direction: column;
+      width: 300px;
+    }
+
+    .addr-item2 {
+      padding-top: 20px;
+      text-align: left;
+    }
+    .addr-item3 {
+      padding-top: 20px;
+      text-align: left;
+    }
+
     .reviews-desktop {
       display: none;
     }
@@ -369,12 +459,32 @@ import { Icon } from "astro-icon";
       font-size: 26px;
     }
 
+    .address {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .all-addr-items {
+      display: flex;
+      flex-direction: column;
+      width: 200px;
+    }
+
     .addr-item1 {
       padding-left: 0px;
-      padding-right: 3px;
+      padding-right: 0px;
     }
 
     .addr-item2 {
+      padding-top: 20px;
+      padding-left: 0px;
+      padding-right: 0px;
+    }
+
+    .addr-item3 {
+      padding-top: 20px;
+      text-align: left;
       padding-left: 3px;
       padding-right: 0px;
     }
