--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import { Icon } from "astro-icon";
 
 <Layout title="VitaLena Massage">
   <main>
-    <BannerHome />``
+    <BannerHome />
     <!-- contacts -->
     <div id="contacts" class="contacts">
       <h1>Kontakte</h1>
