--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -20,7 +20,7 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
             <Icon name="fa-solid:home" class="addr-icon home-icon" />
             <div>
               <div class="addr-place">
-                <p>SALZGROTTE</p>
+                <p>Praxis in der Salzgrotte</p>
                 <a href="https://salzgrotte.ch/offer-prices/" target="_blank">
                   salzgrotte.ch
                 </a>
@@ -105,7 +105,7 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
         </iframe>
       </div>
 
-      <div class="contact-form">
+      <!-- <div class="contact-form">
         <h2>Für Buchung in der Salzgrotte</h2>
         <form name="contact-salzgrotte" method="POST" data-netlify="true">
           <input type="hidden" name="subject" value="Anfrage Massage" />
@@ -133,9 +133,10 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
             <ButtonGreySubmit text="SENDEN" />
           </div>
         </form>
-      </div>
+      </div> -->
+
       <div id="personal-contact" class="contact-form">
-        <h2>Für alles andere</h2>
+        <h2>Für Buchung und Fragen</h2>
         <form name="contact-general" method="POST" data-netlify="true">
           <input type="hidden" name="subject" value="Anfrage Massage" />
           <p>
