--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,7 +63,7 @@ import { Icon } from "astro-icon";
               <Icon name="fa-solid:home" class="addr-icon home-icon" />
               <div>
                 <div class="addr-place">
-                  <p>SALZGROTTE</p>
+                  <p>Praxis in der Salzgrotte</p>
                   <a href="https://salzgrotte.ch/offer-prices/" target="_blank">
                     salzgrotte.ch
                   </a>
@@ -88,14 +88,14 @@ import { Icon } from "astro-icon";
             </div>
             <div class="icon-text">
               <Icon name="fa-solid:phone-alt" class="addr-icon" />
-              <a href="tel:+41445505555" target="_blank">
-                +41 (0)44 550 55 55</a
+              <a href="tel:+41795648109" target="_blank">
+                +41 (0)79 564 81 09</a
               >
             </div>
             <div class="icon-text icon-text-last">
               <Icon name="fa-solid:envelope" class="addr-icon" />
               <a href="mailto:info@salzgrotte.ch" target="_blank"
-                >info@salzgrotte.ch</a
+                >elena_schaller@swissonline.ch</a
               >
             </div>
           </div>
@@ -105,7 +105,7 @@ import { Icon } from "astro-icon";
               <Icon name="fa-solid:home" class="addr-icon home-icon" />
               <div>
                 <div class="addr-place">
-                  <p>Dopamin</p>
+                  <p>Dopamin Praxis</p>
                   <a href="https://dopaminmassagekloten.ch/" target="_blank">
                     dopaminmassagekloten.ch
                   </a>
@@ -130,7 +130,9 @@ import { Icon } from "astro-icon";
             </div>
             <div class="icon-text">
               <Icon name="fa-solid:phone-alt" class="addr-icon" />
-              <a href="tel:+41766990352" target="_blank"> +41 76 699 03 52</a>
+              <a href="tel:+41795648109" target="_blank">
+                +41 (0)79 564 81 09</a
+              >
             </div>
             <div class="icon-text icon-text-last">
               <Icon name="fa-solid:envelope" class="addr-icon" />
