Phone number and e'mail correction

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -94,7 +94,7 @@ import { Icon } from "astro-icon";
             </div>
             <div class="icon-text icon-text-last">
               <Icon name="fa-solid:envelope" class="addr-icon" />
-              <a href="mailto:info@salzgrotte.ch" target="_blank"
+              <a href="mailto:elena_schaller@swissonline.ch" target="_blank"
                 >elena_schaller@swissonline.ch</a
               >
             </div>
@@ -136,7 +136,7 @@ import { Icon } from "astro-icon";
             </div>
             <div class="icon-text icon-text-last">
               <Icon name="fa-solid:envelope" class="addr-icon" />
-              <a href="mailto:info@salzgrotte.ch" target="_blank"
+              <a href="mailto:elena_schaller@swissonline.ch" target="_blank"
                 >elena_schaller@swissonline.ch</a
               >
             </div>
