--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -43,8 +43,8 @@ import ButtonGreySubmit from "../components/ButtonGreySubmit.astro";
           </div>
           <div class="icon-text icon-text-last">
             <Icon name="fa-solid:envelope" class="addr-icon" />
-            <a href="mailto:info@salzgrotte.ch" target="_blank"
-              >info@salzgrotte.ch</a
+            <a href="mailto:ielena_schaller@swissonline.ch" target="_blank"
+              >elena_schaller@swissonline.ch</a
             >
           </div>
         </div>
