--- a/src/components/SlideshowEventList3Img.astro
+++ b/src/components/SlideshowEventList3Img.astro
@@ -334,6 +334,7 @@ const dataDesktop = json;
         <p>- Jan Vincent, 23. August 2024</p>
       </div>
     </div>
+
     <div class="slide-text">
       <div>
         <p>
@@ -348,9 +349,20 @@ const dataDesktop = json;
       </div>
     </div>
 
-    <div class="slide-text slide-text-empty">
-      <p>Hier könnte Ihre Bewertung sein</p>
+    <div class="slide-text">
+      <div>
+        <p>
+          Elena ist super kompetent in ihrem Gebiet und über die Massage hinaus
+          gibt sie wertvoll Tipps. Sehr geschätzt, ich buch wieder Termine bei
+          ihr.
+        </p>
+        <p>- Amanda, 27. Juni 2025</p>
+      </div>
     </div>
+
+    <!-- <div class="slide-text slide-text-empty">
+      <p>Hier könnte Ihre Bewertung sein</p>
+    </div> -->
   </div>
 
   <!-- Control buttons -->
