--- a/src/components/SlideshowEventList2Img.astro
+++ b/src/components/SlideshowEventList2Img.astro
@@ -372,9 +372,20 @@ import { Icon } from "astro-icon";
       </div>
     </div>
 
-    <div class="slide-text no-review">
-      <p>Hier könnte Ihre Bewertung sein</p>
+    <div class="slide-text">
+      <div>
+        <p>
+          Elena ist super kompetent in ihrem Gebiet und über die Massage hinaus
+          gibt sie wertvoll Tipps. Sehr geschätzt, ich buch wieder Termine bei
+          ihr.
+        </p>
+        <p>- Amanda, 27. Juni 2025</p>
+      </div>
     </div>
+
+    <!-- <div class="slide-text no-review">
+      <p>Hier könnte Ihre Bewertung sein</p>
+    </div> -->
   </div>
 
   <!-- Control buttons -->
