--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -190,15 +190,15 @@ import { Icon } from "astro-icon";
       <h1>Preise</h1>
       <div class="price-columns">
         <div>
-          <h2>In der Salzgrotte</h2>
+          <h2>In den Praxisen in Kloten</h2>
           <div class="prices">
-            <p>Klassische Massage 120 CHF pro 60 Minuten</p>
-            <p>Entspannungsmassage 120 CHF pro 60 Minuten</p>
-            <p>Sportmassage 120 CHF pro 60 Minuten</p>
+            <p>Klassische Massage ab 120 CHF pro 60 Minuten</p>
+            <p>Entspannungsmassage ab 120 CHF pro 60 Minuten</p>
+            <p>Sportmassage ab 120 CHF pro 60 Minuten</p>
           </div>
         </div>
         <div>
-          <h2>Im Praxisraum</h2>
+          <h2>Im Praxisraum in Weiach</h2>
           <div class="prices">
             <p>Klassische Massage 100 CHF pro 60 Minuten</p>
             <p>Entspannungsmassage 100 CHF pro 60 Minuten</p>
@@ -360,7 +360,7 @@ import { Icon } from "astro-icon";
   .price-section {
     padding: 0 40px 20px 40px;
     text-align: center;
-    max-width: 1000px;
+    max-width: 1100px;
     margin: 0 auto;
   }
 
@@ -377,7 +377,7 @@ import { Icon } from "astro-icon";
   }
 
   .prices {
-    max-width: 420px;
+    max-width: 450px;
     margin: 0 auto;
     text-align: left;
     margin-bottom: 20px;
