--- a/src/pages/massage.astro
+++ b/src/pages/massage.astro
@@ -117,15 +117,15 @@ import Footer from "../components/Footer.astro";
         <h2>Preise</h2>
         <div class="price-columns">
           <div>
-            <h3>In der Salzgrotte</h3>
+            <h3>In den Praxisen in Kloten</h3>
             <div class="prices">
-              <p>Klassische Massage 120 CHF pro 60 Minuten</p>
-              <p>Entspannungsmassage 120 CHF pro 60 Minuten</p>
-              <p>Sportmassage 120 CHF pro 60 Minuten</p>
+              <p>Klassische Massage ab 120 CHF pro 60 Minuten</p>
+              <p>Entspannungsmassage ab 120 CHF pro 60 Minuten</p>
+              <p>Sportmassage ab 120 CHF pro 60 Minuten</p>
             </div>
           </div>
           <div>
-            <h3>Im Praxisraum</h3>
+            <h3>Im Praxisraum in Weiach</h3>
             <div class="prices">
               <p>Klassische Massage 100 CHF pro 60 Minuten</p>
               <p>Entspannungsmassage 100 CHF pro 60 Minuten</p>
@@ -200,7 +200,7 @@ import Footer from "../components/Footer.astro";
   }
 
   .prices {
-    max-width: 420px;
+    max-width: 450px;
     margin: 0 auto;
     text-align: left;
     margin-bottom: 20px;
