Added a link to Instagram under Dopamin address

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -109,6 +109,12 @@ import { Icon } from "astro-icon";
                   <a href="https://dopaminmassagekloten.ch/" target="_blank">
                     dopaminmassagekloten.ch
                   </a>
+                  <a
+                    href="https://www.instagram.com/schallerelena/"
+                    target="_blank"
+                  >
+                    Instagram
+                  </a>
                 </div>
                 <p>
                   <a
