--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -103,7 +103,7 @@ import { Icon } from "astro-icon";
           <div class="addr-item3">
             <div class="icon-text">
               <Icon name="fa-solid:home" class="addr-icon home-icon" />
-              <>
+              <div>
                 <div class="addr-place">
                   <p>Dopamin Praxis</p>
                   <a href="https://dopaminmassagekloten.ch/" target="_blank">
@@ -135,7 +135,7 @@ import { Icon } from "astro-icon";
                     8302 Kloten
                   </a>
                 </p>
-              </>
+              </div>
             </div>
             <div class="icon-text">
               <Icon name="fa-solid:phone-alt" class="addr-icon" />
