div around p for isntagram link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -110,6 +110,16 @@ import { Icon } from "astro-icon";
                     dopaminmassagekloten.ch
                   </a>
                 </div>
+                <div>
+                  <p>
+                    <a
+                      href="https://www.instagram.com/schallerelena/"
+                      target="_blank"
+                    >
+                      Instagram
+                    </a>
+                  </p>
+                </div>
                 <p>
                   <a
                     href="https://www.instagram.com/schallerelena/"
