Added margin to instagam link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -110,7 +110,7 @@ import { Icon } from "astro-icon";
                     dopaminmassagekloten.ch
                   </a>
                 </div>
-                <div>
+                <div class="addr-place">
                   <p>
                     <a
                       href="https://www.instagram.com/schallerelena/"
@@ -120,14 +120,6 @@ import { Icon } from "astro-icon";
                     </a>
                   </p>
                 </div>
-                <p>
-                  <a
-                    href="https://www.instagram.com/schallerelena/"
-                    target="_blank"
-                  >
-                    Instagram
-                  </a>
-                </p>
 
                 <p>
                   <a
